--- a/csharp/GUI/OptionTreeViewItem.xaml
+++ b/csharp/GUI/OptionTreeViewItem.xaml
@@ -22,6 +22,8 @@
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="TextWrapping" Value="Wrap"/>
+            <Setter Property="CaretBrush" Value="{StaticResource ThemedMaxContrastBrush}"></Setter>
+            <Setter Property="materialDesign:TextFieldAssist.UnderlineBrush" Value="{StaticResource ThemedIndigoBrush}"/>
             <EventSetter Event="KeyDown" Handler="OptionValueTextBox_KeyDown"/>
         </Style>
         <Style x:Key="OptionIntegerBox" TargetType="{x:Type local:IntegerNumericBox}" BasedOn="{StaticResource OptionTextBox}">
@@ -64,7 +66,6 @@
                 <TextBlock x:Name="TextBlockNearTextBox" Style="{StaticResource OptionTextBlock}" VerticalAlignment="Center" Text="{Binding Path=OptionInfo.Notes, StringFormat={}{0}：}"/>
                 <TextBox
                     Style="{StaticResource OptionTextBox}"
-                    CaretBrush="{StaticResource ThemedHighContrastButtonForegroundBrush}"
                     VerticalAlignment="Center"
                     Padding="2 4"
                     Text="{Binding Path=OptionValue}"
@@ -79,7 +80,6 @@
                 <TextBlock Style="{StaticResource OptionTextBlock}" VerticalAlignment="Center" Text="{Binding Path=OptionInfo.Notes, StringFormat={}{0}：}"/>
                 <local:IntegerNumericBox
                     Style="{StaticResource OptionIntegerBox}"
-                    CaretBrush="{StaticResource ThemedHighContrastButtonForegroundBrush}"
                     VerticalAlignment="Center"
                     Padding="2 3"
                     d:Text="60"
@@ -95,7 +95,6 @@
                 <TextBlock Style="{StaticResource OptionTextBlock}" VerticalAlignment="Center" Text="{Binding Path=OptionInfo.Notes, StringFormat={}{0}：}"/>
                 <local:DoubleNumericBox
                     Style="{StaticResource OptionDoubleBox}"
-                    CaretBrush="{StaticResource ThemedHighContrastButtonForegroundBrush}"
                     VerticalAlignment="Center"
                     Padding="2 3"
                     d:Text="60"
@@ -109,7 +108,7 @@
                 <ToggleButton
                     VerticalAlignment="Center"
                     Style="{StaticResource MaterialDesignSwitchToggleButton}"
-                    Background="{StaticResource ThemedButtonForegroundBrush}"
+                    Background="{StaticResource ThemedIndigoBrush}"
                     Width="40"
                     Height="20"
                     Margin="-2 0 0 0"
@@ -127,6 +126,7 @@
                 <ComboBox
                     Margin="0 5 0 2"
                     Padding="2 0 0 2"
+                    materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource ThemedIndigoBrush}"
                     ItemsSource="{Binding Path=OptionInfo.EnumChoices}"
                     SelectedIndex="{Binding ChoiceIndex}"
                     ToolTip="{Binding RelativeSource={RelativeSource Mode=Self}, Path=SelectedItem.Label}">
