版本 1.1.3  - 实现了应用程序更新时保留配置项和已安装的插件  - 修复了消息对话框无法关闭的 bug  - 修复了误删除插件目录后无法安装插件的 bug  - 优化部分 UI

--- a/csharp/GUI/Dialog/MessageDialog.xaml
+++ b/csharp/GUI/Dialog/MessageDialog.xaml
@@ -39,7 +39,8 @@
                 Style="{StaticResource MaterialDesignFlatButton}"
                 Foreground="{StaticResource ThemedIndigoBrush}"
                 d:Content="确定"
-                Content="{Binding ButtonText}">
+                Content="{Binding ButtonText}"
+                Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
             </Button>
         </StackPanel>
     </Grid>
