版本 1.1.4  - 实现检查与获取更新  - 开放插件市场菜单项  - 优化 UI，修复一些 bug

--- a/csharp/GUI/App.xaml
+++ b/csharp/GUI/App.xaml
@@ -22,6 +22,7 @@
             <local:EnumerableIsNotEmptyConverter x:Key="EnumerableIsNotEmptyConverter"/>
             <local:CollectionToVisibilityConverter x:Key="CollectionToVisibilityConverter"/>
             <local:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+            <local:StringNotBlankToVisibilityConverter x:Key="StringNotBlankToVisibilityConverter"/>
             <local:ReversedVisibilityConverter x:Key="ReversedVisibilityConverter"/>
             <local:CollectionElementConverter x:Key="CollectionElementConverter"/>
             <local:IndexToEnumValueConverter x:Key="IndexToEnumValueConverter"/>
