--- a/csharp/GUI/TaskListViewItem.xaml
+++ b/csharp/GUI/TaskListViewItem.xaml
@@ -251,7 +251,8 @@
                 VerticalAlignment="Center"
                 HorizontalContentAlignment="Center"
                 materialDesign:TextFieldAssist.UnderlineBrush="{StaticResource ThemedIndigoBrush}"
-                Padding="2 4"
+                Margin="0 2 0 0"
+                Padding="2 2"
                 FontSize="13"
                 Text="{Binding ExportTitle}"
                 CaretBrush="{StaticResource ThemedMaxContrastBrush}"
