--- a/csharp/GUI/Dialog/AboutDialog.xaml
+++ b/csharp/GUI/Dialog/AboutDialog.xaml
@@ -5,6 +5,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:OpenSvip.GUI"
+    xmlns:config="clr-namespace:OpenSvip.GUI.Config"
+    xmlns:framework="clr-namespace:OpenSvip.Framework;assembly=OpenSvip.Framework"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     mc:Ignorable="d"
     d:Background="White"
@@ -16,25 +18,22 @@
             <Setter Property="HorizontalAlignment" Value="Center"/>
         </Style>
     </UserControl.Resources>
-    <UserControl.InputBindings>
-        <KeyBinding Key="Esc" Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
-    </UserControl.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition Height="60"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Margin="16 16 16 5">
             <materialDesign:PackIcon HorizontalAlignment="Center" Kind="Application" Opacity="0.8" Width="80" Height="80" Margin="0 0 0 10"/>
-            <TextBlock Text="OpenSVIP" FontSize="40" FontWeight="Bold"/>
-            <TextBlock d:Text="框架版本：1.2.0" FontSize="16">
+            <TextBlock Text="{x:Static framework:ConstValues.FrameworkName}" FontSize="40" FontWeight="Bold"/>
+            <TextBlock FontSize="16">
                 <TextBlock.Text>
-                    <Binding Path="Information.FrameworkVersion" StringFormat="{}框架版本：{0}"/>
+                    <Binding Source="{x:Static framework:ConstValues.FrameworkVersion}" StringFormat="{}框架版本：{0}"/>
                 </TextBlock.Text>
             </TextBlock>
-            <TextBlock d:Text="应用程序版本：1.0.0 (Preview)" FontSize="16">
+            <TextBlock FontSize="16">
                 <TextBlock.Text>
-                    <Binding Path="Information.Version" StringFormat="{}应用程序版本：{0}"/>
+                    <Binding Source="{x:Static config:Information.ApplicationVersion}" StringFormat="{}应用程序版本：{0}"/>
                 </TextBlock.Text>
             </TextBlock>
             <TextBlock Text="预览版本 暂勿传播" Foreground="#f44336"/>
@@ -46,16 +45,18 @@
                         <Setter Property="Margin" Value="10 0"/>
                         <Setter Property="Padding" Value="0"/>
                         <Setter Property="Foreground" Value="{StaticResource ThemedHighContrastIndigoBrush}"/>
-                        <EventSetter Event="Click" Handler="OpenLinkButton_Click"/>
+                        <Setter Property="materialDesign:ButtonAssist.CornerRadius" Value="5"/>
+                        <Setter Property="Command" Value="{x:Static local:RelayCommands.StartProcessCommand}"/>
+                        <Setter Property="CommandParameter" Value="{Binding ToolTip, RelativeSource={RelativeSource Self}}"/>
                     </Style>
                 </StackPanel.Resources>
-                <Button ToolTip="{Binding Information.AuthorHomePage}">
+                <Button ToolTip="{x:Static framework:ConstValues.AuthorHomePage}" Focusable="False">
                     <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="User" VerticalAlignment="Center" Margin="-3 0 2 0"/>
                         <TextBlock Text="作者主页" FontSize="14" Margin="2 0 2 0"/>
                     </StackPanel>
                 </Button>
-                <Button ToolTip="{Binding Information.GitHubRepository}">
+                <Button ToolTip="{x:Static config:Information.GitHubRepository}" Focusable="False">
                     <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Github" VerticalAlignment="Center" Margin="-3 0 2 0"/>
                         <TextBlock Text="项目仓库" FontSize="14" Margin="2 0 2 0"/>
@@ -83,12 +84,15 @@
             Grid.Row="1"
             VerticalAlignment="Center"
             HorizontalAlignment="Center"
+            Margin="0 8 0 20"
             Style="{StaticResource MaterialDesignFlatButton}"
             Foreground="{StaticResource ThemedIndigoBrush}"
-            Margin="0 8 0 10"
+            materialDesign:ButtonAssist.CornerRadius="5"
             Height="40"
             Width="90"
             Content="确定"
+            IsDefault="True"
+            IsCancel="True"
             Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}">
         </Button>
     </Grid>
