--- a/csharp/GUI/MainWindow.xaml
+++ b/csharp/GUI/MainWindow.xaml
@@ -5,9 +5,10 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:local="clr-namespace:OpenSvip.GUI"
+    xmlns:framework="clr-namespace:OpenSvip.Framework;assembly=OpenSvip.Framework"
+    xmlns:config="clr-namespace:OpenSvip.GUI.Config"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:panuon="clr-namespace:Panuon.UI.Silver;assembly=Panuon.UI.Silver"
-    xmlns:config="clr-namespace:OpenSvip.GUI.Config"
     mc:Ignorable="d"
     Title="OpenSVIP - 歌声合成工程文件转换器（预览版本）"
     FontFamily="Microsoft YaHei UI"
@@ -89,7 +90,8 @@
         <KeyBinding Gesture="Ctrl+R" Command="{x:Static local:MainWindow.ResetCommand}" CommandParameter="{Binding}"/>
         <KeyBinding Gesture="Ctrl+W" Command="{x:Static local:MainWindow.SwapPluginCommand}" CommandParameter="{Binding}"/>
         <KeyBinding Gesture="Ctrl+P" Command="{x:Static local:MainWindow.InstallPluginCommand}" CommandParameter="{Binding}"/>
-        <KeyBinding Gesture="Ctrl+A" Command="{x:Static local:MainWindow.AboutCommand}" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:MainWindow}}"/>
+        <KeyBinding Gesture="Ctrl+U" Command="{x:Static local:MainWindow.CheckUpdateCommand}"/>
+        <KeyBinding Gesture="Ctrl+A" Command="{x:Static local:MainWindow.AboutCommand}" CommandParameter="{Binding}"/>
     </Window.InputBindings>
     <panuon:WindowXCaption.HeaderTemplate>
         <DataTemplate>
@@ -113,7 +115,7 @@
                             RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=Window}"
                             Path="IsActive"
                             Converter="{StaticResource BooleanSwitchOperationConverter}"
-                            ConverterParameter="1;0.75"
+                            ConverterParameter="1;0.6"
                             Mode="OneWay"/>
                     </materialDesign:PackIcon.Opacity>
                 </materialDesign:PackIcon>
@@ -126,7 +128,8 @@
                     FontFamily="Microsoft YaHei UI"
                     FontSize="13"
                     FontWeight="Normal"
-                    panuon:WindowX.IsDragMoveArea="False">
+                    panuon:WindowX.IsDragMoveArea="False"
+                    IsEnabled="{Binding IsOpen, ElementName=RootDialogHost, Converter={StaticResource InvertBooleanConverter}}">
                     <Menu.Resources>
                         <Style TargetType="MenuItem" BasedOn="{StaticResource MaterialDesignMenuItem}">
                             <Setter Property="Height" Value="30"/>
@@ -195,7 +198,12 @@
                         <MenuItem Header="上下交换(_W)" InputGestureText="Ctrl+W" Icon="{materialDesign:PackIcon Kind=SwapVertical, Size=18}" Command="{x:Static local:MainWindow.SwapPluginCommand}" CommandParameter="{Binding}"/>
                         <Separator Style="{StaticResource MenuItemSeparator}"/>
                         <MenuItem Header="安装插件(_P)..." InputGestureText="Ctrl+P" Icon="{materialDesign:PackIcon Kind=PuzzlePlusOutline}" Command="{x:Static local:MainWindow.InstallPluginCommand}" CommandParameter="{Binding}"/>
-                        <MenuItem Header="插件市场(_M)" IsEnabled="False" Icon="{materialDesign:PackIcon Kind=CloudSearchOutline}"/>
+                        <MenuItem
+                            Header="插件市场(_M)"
+                            Icon="{materialDesign:PackIcon
+                            Kind=CloudSearchOutline}"
+                            Command="{x:Static local:RelayCommands.StartProcessCommand}"
+                            CommandParameter="{x:Static framework:ConstValues.PluginMarket}"/>
                     </MenuItem>
                     <MenuItem Header="设置(_O)" Height="22" Padding="10 0">
                         <MenuItem Header="自动检测导入格式(_D)" IsCheckable="True" IsChecked="{Binding IsChecked, ElementName=AutoDetectToggle}"/>
@@ -252,9 +260,18 @@
                         </MenuItem>
                     </MenuItem>
                     <MenuItem Header="帮助(_H)" Height="22" Padding="10 0">
-                        <MenuItem Header="在线用户手册(_M)" IsEnabled="False" Icon="{materialDesign:PackIcon Kind=TextBoxSearchOutline}" InputGestureText="Ctrl+H"/>
-                        <MenuItem Header="检查更新(_U)" IsEnabled="False" Icon="{materialDesign:PackIcon Kind=UploadMultiple}" InputGestureText="Ctrl+U"/>
-                        <MenuItem Header="关于 OpenSVIP(_A)" Icon="{materialDesign:PackIcon Kind=InformationOutline}" InputGestureText="Ctrl+A" Click="AboutMenuItem_Click"/>
+                        <MenuItem
+                            Header="在线文档(_M)"
+                            Icon="{materialDesign:PackIcon Kind=TextBoxSearchOutline}"
+                            InputGestureText="Ctrl+H"
+                            Command="{x:Static local:RelayCommands.StartProcessCommand}"
+                            CommandParameter="{x:Static config:Information.OnlineDocuments}"/>
+                        <MenuItem
+                            Header="检查更新(_U)"
+                            Icon="{materialDesign:PackIcon Kind=UploadMultiple}"
+                            InputGestureText="Ctrl+U"
+                            Command="{x:Static local:MainWindow.CheckUpdateCommand}"/>
+                        <MenuItem Header="关于 OpenSVIP(_A)" Icon="{materialDesign:PackIcon Kind=InformationOutline}" InputGestureText="Ctrl+A" Command="{x:Static local:MainWindow.AboutCommand}"/>
                     </MenuItem>
                 </Menu>
                 <Separator Grid.Column="2" Width="18" Margin="0 1 0 0" Opacity="0.6">
@@ -281,14 +298,14 @@
                             RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType=Window}"
                             Path="IsActive"
                             Converter="{StaticResource BooleanSwitchOperationConverter}"
-                            ConverterParameter="1;0.75"
+                            ConverterParameter="1;0.6"
                             Mode="OneWay"/>
                     </TextBlock.Opacity>
                 </TextBlock>
             </Grid>
         </DataTemplate>
     </panuon:WindowXCaption.HeaderTemplate>
-    <materialDesign:DialogHost Identifier="RootDialogHost">
+    <materialDesign:DialogHost x:Name="RootDialogHost" Identifier="RootDialogHost">
         <Grid>
             <Grid Visibility="Collapsed">
                 <Grid.Resources>
@@ -429,7 +446,7 @@
                                                 Height="20"
                                                 Cursor="Hand"
                                                 IsChecked="{Binding AutoDetectFormat}"/>
-                                            <TextBlock x:Name="AutoDetectText" VerticalAlignment="Center" Margin="5" Text="自动检测导入格式" FontSize="14" Opacity="0.8"/>
+                                            <TextBlock x:Name="AutoDetectText" VerticalAlignment="Center" Margin="5" Text="自动检测导入格式" FontSize="14"/>
                                         </StackPanel>
                                         <StackPanel Margin="10 0 0 0" Orientation="Horizontal">
                                             <ToggleButton
@@ -441,7 +458,7 @@
                                                 Height="20"
                                                 Cursor="Hand"
                                                 IsChecked="{Binding AutoResetTasks}"/>
-                                            <TextBlock x:Name="AutoResetText" VerticalAlignment="Center" Margin="5" Text="切换格式时重置列表" FontSize="14" Opacity="0.8"/>
+                                            <TextBlock x:Name="AutoResetText" VerticalAlignment="Center" Margin="5" Text="切换格式时重置列表" FontSize="14"/>
                                         </StackPanel>
                                     </WrapPanel>
                                 </Grid>
